--- a/websiteWR/src/app/Admin/manage-drivers/manage-drivers.component.html
+++ b/websiteWR/src/app/Admin/manage-drivers/manage-drivers.component.html
@@ -1,10 +1,15 @@
-<!-- <div>
+<div *ngIf="isLoading">
+    <app-spinner></app-spinner>
+</div>
+
+<div *ngIf="!isLoading">
+    <h1 style="text-align:center">Manage Drivers</h1>
     <div nz-row style="margin-bottom: 20px;">
         <div nz-col  [nzSpan]="6">
             <nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton">
                 <input
                  type="text" 
-                 nz-input placeholder="Filter (e.g Yuvraaj/5123455/Souillac)" 
+                 nz-input placeholder="Filter (Name or Phone number)" 
                  (keyup)="applySearch($event)"
                  [(ngModel)]="search"
                  />
@@ -14,37 +19,34 @@
             </ng-template>
         </div>
 
-        
-    </div>
-</div>
-
-<div style="text-align:center">
-    <h1>Manage Drivers</h1>
-    <div class="grid">
-        <div *ngFor= "let region of listPrices" style="margin:10px; width:270px;" class="grid-item">
-            <app-region-card
-                [imageUrl]="region.imageUrl"
-                [regionName]="region.regionName"
-                [regionPrice]="region.regionPrice"
-            ></app-region-card>
+        <div nz-col nzOffset="1">
+            <nz-select
+                nzPlaceHolder="Status" 
+                [(ngModel)]="selectedStatus"
+                (ngModelChange)="handleStatusChange()">
+                <nz-option nzValue="All" nzLabel="All"></nz-option>
+                <nz-option nzValue="APPROVED" nzLabel="Approved"></nz-option>
+                <nz-option nzValue="PENDING" nzLabel="Pending"></nz-option>
+                <nz-option nzValue="DECLINED" nzLabel="Declined"></nz-option>
+            </nz-select>
         </div>
-        <app-driver-card></app-driver-card>
-        <app-driver-card></app-driver-card>
-        <app-driver-card></app-driver-card>
-        <app-driver-card></app-driver-card>
+
+        <div nz-col nzOffset="1" *ngIf="showClearButton">
+            <button 
+                nz-button
+                nzShape="round" 
+                (click)="clearFilter()"
+                style="background-color: #ac1010; color: #fff;"
+                >Clear Filters</button> 
+        </div>    
     </div>
-</div> -->
 
-
-
-
-<!-- <div class="grid">
-    <div class="grid-item">
-        <app-driver-card></app-driver-card>
+    <div style="text-align:center">    
+        <div class="grid">
+            <div *ngFor= "let driver of filteredRows" class="grid-item">
+                <app-driver-card [driverObject]="driver" ></app-driver-card>
+            </div>
+        </div>
     </div>
-  
 
-
-
-
-</div> -->
+</div>
