--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -38,7 +38,7 @@
 
     <li *ngIf="isLoggedIn">
       <a
-        [routerLink]="['User-Management/Drivers']"
+        [routerLink]="['Admin/Manage-Drivers']"
         [routerLinkActive]="['active']"
         >Manage Drivers</a
       >
