--- a/websiteWR/src/app/Admin/manage-drivers/driver-card/driver-card.component.html
+++ b/websiteWR/src/app/Admin/manage-drivers/driver-card/driver-card.component.html
@@ -1,11 +1,34 @@
-<nz-card nzHoverable style="height:250px; width:200px" [nzCover]="coverTemplate">
-    <nz-card-meta [nzTitle]="title" nzDescription="sswdwdwf"></nz-card-meta>
+<nz-card nzHoverable style="height:400px; width:250px" [nzCover]="coverTemplate">
+    <nz-card-meta [nzTitle]="title"></nz-card-meta>
 </nz-card>
 
 <ng-template #coverTemplate>
-    <img width="150" height="150" alt="Photo of region" src="assets/images/truck.jpg" />
+    <img  height="175" alt="Photo of region" src="assets/images/truck.jpg" />
 </ng-template>
 
 <ng-template #title >
-    <h3 class="header-container "> s</h3>
+    <h4>First Name:<span class="details">{{driverObject.firstName}}</span></h4>
+    <h4>Last Name:<span class="details">{{driverObject.lastName}}</span></h4>
+    <h4>Phone Number:<span class="details">{{driverObject.phoneNumber}}</span></h4>
+    <button 
+        nz-button 
+        nzShape="round" 
+        class="popupButton" 
+        (click)="openUrl(driverObject.idCard)"
+    >ID Card<i nz-icon class="iconCss" nzType="right"></i></button>
+    <button 
+        nz-button 
+        nzShape="round" 
+        class="popupButton" 
+        (click)="openUrl(driverObject.proofOfAddress)"
+    >Proof of Address<i nz-icon class="iconCss" nzType="right"></i></button>
+    <button 
+        nz-button 
+        nzShape="round" 
+        class="popupButton" 
+        (click)="openUrl(driverObject.drivingLicense)"
+    >Driving License<i nz-icon class="iconCss" nzType="right"></i></button>
+
+    
+    
 </ng-template>
