--- a/websiteWR/src/app/Admin/manage-drivers/manage-drivers.component.html
+++ b/websiteWR/src/app/Admin/manage-drivers/manage-drivers.component.html
@@ -4,7 +4,7 @@
 
 <div *ngIf="!isLoading">
     <h1 style="text-align:center">Manage Drivers</h1>
-    <div nz-row style="margin-bottom: 20px;">
+    <!-- <div nz-row style="margin-bottom: 20px;">
         <div nz-col  [nzSpan]="6">
             <nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton">
                 <input
@@ -39,7 +39,7 @@
                 style="background-color: #ac1010; color: #fff;"
                 >Clear Filters</button> 
         </div>    
-    </div>
+    </div> -->
 
     <div style="text-align:center">    
         <div class="grid">
