created Driver folder

--- a/websiteWR/src/app/Drivers/driver-profile/driver-profile.component.html
+++ b/websiteWR/src/app/Drivers/driver-profile/driver-profile.component.html
@@ -9,7 +9,7 @@
             <div class="leftCard"> 
                 <img alt="Photo of region" src="assets/images/truck.jpg" />
                 <h2>Username</h2>
-                <h3>Administrator</h3>
+                <h3>Driver</h3>
 
                 <button 
                     nz-button 
