--- a/websiteWR/src/app/Admin/manage-bins/manage-bins.component.html
+++ b/websiteWR/src/app/Admin/manage-bins/manage-bins.component.html
@@ -5,7 +5,7 @@
         <h1>Manage Bins</h1>
         <nz-alert
           nzType="info"
-          nzMessage="Add new bin"
+          nzMessage="Add a new bin"
           nzDescription="Click anywhere on the map."
           nzShowIcon
         ></nz-alert>
