--- a/websiteWR/src/app/Admin/admin-profile/admin-profile.component.html
+++ b/websiteWR/src/app/Admin/admin-profile/admin-profile.component.html
@@ -2,6 +2,82 @@
     <div nz-row>
         <div nz-col [nzSpan]="18" [nzPush]="6" class="rightBox">
           <h1 style="text-align: center;">My Profile</h1>
+
+            <div class="informationBox"> 
+              <h3>Personal Information</h3>
+              <hr>
+  
+                <div nz-row [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32 }">
+                    <div nz-col [nzSpan]="8">
+                        <div class="inner-box">
+                            <p>First Name</p>
+                            <!-- <span>{{adminObject.firstName}}</span> -->
+                            <span>Admin Details</span>
+                        </div>
+                        </div>
+                        <div nz-col [nzSpan]="8">
+                        <div class="inner-box">
+                            <p>Last Name</p>
+                            <!-- <span>{{adminObject.lastName}}</span> -->
+                            <span>Admin Details</span>
+                        </div>
+                        </div>
+                        <div nz-col [nzSpan]="8">
+                        <div class="inner-box">
+                            <p>Phone Number</p>
+                            <!-- <span>{{adminObject.phoneNumber}}</span> -->
+                            <span>Admin Details</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="informationBox" style="margin-top: 50px;">
+                <h3>Change Password</h3>
+                <hr>
+
+                <div style="width:35%;">
+                    <form nz-form [formGroup]="changePasswordForm" >
+                        <nz-form-item>
+                            <nz-form-control nzBlock nzHasFeedback [nzErrorTip]="userErrorTpl">
+                              <div class="input-container">
+                                <i nz-icon nzType="key" class="icon"></i>
+                                <input nz-input formControlName="oldPassword" placeholder="Old Password" />
+                              </div>
+                              <ng-template #userErrorTpl let-control>
+                                <ng-container *ngIf="control.hasError('required')">
+                                  Please input your old password!
+                                </ng-container>
+                              </ng-template>
+                            </nz-form-control>
+                        </nz-form-item>
+        
+                        <nz-form-item>
+                            <nz-form-control nzBlock nzHasFeedback [nzErrorTip]="userErrorTp2">
+                              <div class="input-container">
+                                <i nz-icon nzType="lock" class="icon"></i>
+                                <input nz-input formControlName="newPassword" placeholder="New Password" />
+                              </div>
+                              <ng-template #userErrorTp2 let-control>
+                                <ng-container *ngIf="control.hasError('required')">
+                                  Please input your new password!
+                                </ng-container>
+                              </ng-template>
+                            </nz-form-control>
+                        </nz-form-item>
+        
+                        <button 
+                        nz-button 
+                        nzType="primary" 
+                        nzBlock
+                        class="updateButton"
+                        (click)="handleChangePassword()"
+                        >
+                        Update Password</button>
+        
+                    </form>
+                </div>
+            </div>
           
         </div>
 
@@ -9,17 +85,7 @@
             <div class="leftCard"> 
                 <img alt="Photo of region" src="assets/images/truck.jpg" />
                 <h2>Username</h2>
-                <h3>Administrator</h3>
-
-                <button 
-                    nz-button 
-                    nzShape="round" 
-                    class="popupButton" 
-                >
-                <i nz-icon nzType="lock"></i>
-                Change Password
-                <i nz-icon class="iconCss" nzType="right"></i></button>
-    
+                <h3>Administrator</h3>    
             </div>
         </div>
       </div>
