--- a/websiteWR/src/app/General-User/homepage/homepage.component.html
+++ b/websiteWR/src/app/General-User/homepage/homepage.component.html
@@ -8,7 +8,7 @@
         area clean-ups and strive to keep the Black River District clean.
       </p>
       <button
-        (click)="navigateTo('/Login')"
+        (click)="navigateTo('/Register')"
         class="registerBtn"
         nz-button
         nzType="primary"
