--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -18,23 +18,15 @@
     </li>
 
     <li *ngIf="isLoggedIn">
-      <a
-        [routerLink]="['Admin/Manage-Drivers']"
-        [routerLinkActive]="['active']"
+      <a [routerLink]="['Admin/Manage-Drivers']" [routerLinkActive]="['active']"
         >Manage Drivers</a
       >
     </li>
 
     <li *ngIf="isLoggedIn">
-      <a
-        [routerLink]="['Admin/My-Profile']"
-        [routerLinkActive]="['active']"
+      <a [routerLink]="['Admin/My-Profile']" [routerLinkActive]="['active']"
         >My Profile</a
       >
-    </li>
-
-    <li *ngIf="!isLoggedIn">
-      <a [routerLink]="['Bins']" [routerLinkActive]="['active']">All Bins</a>
     </li>
 
     <li>
