--- a/websiteWR/src/app/Admin/edit-bins/edit-bins.component.html
+++ b/websiteWR/src/app/Admin/edit-bins/edit-bins.component.html
@@ -1,1 +1,20 @@
-<p>edit-bins works!</p>
+<div nz-row style="margin: 0; padding: 0">
+  <div nz-col nzSpan="6">
+    <div class="left-container">
+      <div *ngIf="currentView == 'view'">
+        <h1>Edit Bins</h1>
+        <nz-alert
+          nzType="info"
+          nzMessage="Click on a bin to change its location or delete it."
+          nzShowIcon
+        ></nz-alert>
+      </div>
+      <div *ngIf="currentView == 'edit'">
+        <h1>Change location</h1>
+      </div>
+    </div>
+  </div>
+  <div nz-col nzSpan="18">
+    <div id="map" class="map"></div>
+  </div>
+</div>
