fix add pickup + view pickups

--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -68,6 +68,15 @@
       >
     </li>
 
+    <li *ngIf="isLoggedIn">
+      <a
+        *ngIf="role == 'ADMIN'"
+        [routerLink]="['View-Pickups']"
+        [routerLinkActive]="['active']"
+        >View Pickups</a
+      >
+    </li>
+
     <li>
       <a [routerLink]="['Prices']" [routerLinkActive]="['active']">Prices</a>
     </li>
