--- a/websiteWR/src/app/General-User/homepage/homepage.component.html
+++ b/websiteWR/src/app/General-User/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div nz-row>
+<div nz-row style="margin-top: 25px">
   <div nz-col nzSpan="8">
     <div class="left-container">
       <h1>We-Recycle</h1>
