--- a/websiteWR/src/app/Drivers/add-pickup/add-pickup.component.html
+++ b/websiteWR/src/app/Drivers/add-pickup/add-pickup.component.html
@@ -1,5 +1,5 @@
 <div class="form" *ngIf="!isValid">
-  <h2>Choose number of pickups made:</h2>
+  <h2>Choose number of bins emptied:</h2>
   <form nz-form [formGroup]="pickupForm" (ngSubmit)="submitForm()">
     <nz-form-item>
       <nz-form-control nzErrorTip="Please enter atleast 1 pickup!">
