--- a/websiteWR/src/app/Drivers/add-pickup/add-pickup.component.css
+++ b/websiteWR/src/app/Drivers/add-pickup/add-pickup.component.css
@@ -1,3 +1,16 @@
+nz-date-picker{
+  width: 100%;
+}
+
+nz-picker{
+  width: 100%;
+  display: inline-block;
+}
+
+.ant-calendar-picker{
+  width: 100%;
+}
+
 .steps-content {
   margin-top: 16px;
   border: 1px dashed #e9e9e9;
